--- a/public/index.html
+++ b/public/index.html
@@ -37,5 +37,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDKVyOlvx9BUhriJoRsfet8WQsNop5_ZRM&libraries=places"></script>
   </body>
 </html>
