--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
     -->
 
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=&libraries=places"></script>
+    <script src="https://use.fontawesome.com/17ffab35aa.js"></script>
     
   </body>
 </html>
